--- a/resources/sass/components/_post.scss
+++ b/resources/sass/components/_post.scss
@@ -211,7 +211,7 @@
 		}
 
 		* {
-            overflow: hidden;
+            word-break: break-word;
 			color: white;
 		}
 	}
